# dashboard_integration_tutorial

./: app.py  dashboard_tutorial.ipynb  main.py  pyproject.toml  sales_data.csv
