[project]
name = "dashboard-integration-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "polars>=1.27.1",
    "pytest>=8.3.5",
    "streamlit>=1.44.1",
]
